--- a/views/dashboard/categorias.html
+++ b/views/dashboard/categorias.html
@@ -138,9 +138,9 @@
                     <tbody>
                         <tr>
                             <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
+                            <td>Ejemlo</td>
+                            <td>Ejemplo</td>
+                            <td>Ejemplo</td>
                         </tr>
                     </tbody>
                 </table>
