--- a/resources/css/public.css
+++ b/resources/css/public.css
@@ -412,6 +412,9 @@ a {
     margin-left: 0% !important;
 }
 
+#carrito{
+    margin-left: 50px;
+}
 
 @media screen and (max-width:900px) {
     .carousel img {
