--- a/views/public/carrito.html
+++ b/views/public/carrito.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sublisivarte</title>
+    <title>Carrito</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
@@ -126,93 +126,103 @@
             </header>
         </div>
         <div class="row">
-            <main>
-                <div class="carousel-principal">
-                    <div class="wrapper-carousel">
-                        <i id="left" class="fa-solid fa-angle-left"></i>
-                        <div class="carousel">
-                            <img src="../../resources/images/tazas.jpg" alt="" draggable="false">
-                            <img src="../../resources/images/mousepad.jpg" alt="" draggable="false">
-                            <img src="../../resources/images/accesorios.jpg" alt="" draggable="false">
-                            <img src="../../resources/images/camisas.jpg" alt="" draggable="false">
-                            <img src="../../resources/images/ropa.jpg" alt="" draggable="false">
-                            <img src="../../resources/images/frame.jpg" alt="" draggable="false">
-                        </div>
-                        <i id="rigth" class="fa-solid fa-angle-right"></i>
-                    </div>
-                </div>
-                <div class="container mt-3 py-3 productos">
-                    <p class="fs-3 pb-3 text-light fw-bold">Ofertas</p>
-                    <div class="row d-flex justify-content-between" id="Nuevos-productos">
-                        <div class="col-2">
-                            <div class="card border border-0 bg-dark text-light text-center" style="width: 13rem;">
-                                <img src="../../resources/images/camisas.jpg" class="card-img-top rounded" alt="...">
-                                <div class="card-body d-grid gap-2">
-                                    <h5 class="card-title">Camisas</h5>
-                                    <p class="card-text"></p>
-                                    <a href="../public/producto.html" class="btn btn-primary rounded">Ver mas...</a>
+            <div class="container text-light" id="carrito">
+                <p class="fs-3">Carrito de Compras</p>
+                <div class="row mb-4">
+                    <div class="col-10">
+                        <div class="row mb-3">
+                            <div class="col-3">
+                                <img src="../../resources/images/camisas.jpg" alt="" class="img-fluid">
+                            </div>
+                            <div class="col-9">
+                                <p class="fs-5 text-light">Centro de lavado MCL2040EPDG0 | 44 lb (lavado), 44 lb
+                                    (secado)</p>
+                                <p class="fs-6">Mayor capacidad, diseño fácil de usar y panel Touch amigable.</p>
+                                <div class="d-flex flex-row justify-content-between">
+                                    <p class="fs-6">$199.99</p>
+                                    <p class="fs-6">cantidad: 1</p>
+                                    <p class="fs-6">Garantía: 12 meses</p>
+                                    <p class="fs-6">Total: $199.99</p>
+                                    <a href="">eliminar</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-2">
-                            <div class="card text-center bg-dark text-light border border-0" style="width: 13rem;">
-                                <img src="../../resources/images/tazas.jpg" class="card-img-top rounded" alt="...">
-                                <div class="card-body d-grid gap-2">
-                                    <h5 class="card-title">Vaso</h5>
-                                    <p class="card-text"></p>
-                                    <a href="#" class="btn btn-primary rounded">Ver mas...</a>
+                        <div class="row mb-3">
+                            <div class="col-3">
+                                <img src="../../resources/images/camisas.jpg" alt="" class="img-fluid">
+                            </div>
+                            <div class="col-9">
+                                <p class="fs-5">Centro de lavado MCL2040EPDG0 | 44 lb (lavado), 44 lb (secado)</p>
+                                <p class="fs-6">Mayor capacidad, diseño fácil de usar y panel Touch amigable.</p>
+                                <div class="d-flex flex-row justify-content-between">
+                                    <p class="fs-6">$199.99</p>
+                                    <p class="fs-6">cantidad: 1</p>
+                                    <p class="fs-6">Garantía: 12 meses</p>
+                                    <p class="fs-6">Total: $199.99</p>
+                                    <a href="">eliminar</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-2">
-                            <div class="card text-center bg-dark text-light border border-0" style="width: 13rem;">
-                                <img src="../../resources/images/ropa.jpg" class="card-img-top rounded" alt="...">
-                                <div class="card-body d-grid gap-2">
-                                    <h5 class="card-title">bolsa</h5>
-                                    <p class="card-text"></p>
-                                    <a href="#" class="btn btn-primary rounded">Ver mas...</a>
+                        <div class="row mb-3">
+                            <div class="col-3">
+                                <img src="../../resources/images/camisas.jpg" alt="" class="img-fluid">
+                            </div>
+                            <div class="col-9">
+                                <p class="fs-5">Centro de lavado MCL2040EPDG0 | 44 lb (lavado), 44 lb (secado)</p>
+                                <p class="fs-6">Mayor capacidad, diseño fácil de usar y panel Touch amigable.</p>
+                                <div class="d-flex flex-row justify-content-between">
+                                    <p class="fs-6">$199.99</p>
+                                    <p class="fs-6">cantidad: 1</p>
+                                    <p class="fs-6">Garantía: 12 meses</p>
+                                    <p class="fs-6">Total: $199.99</p>
+                                    <a href="">eliminar</a>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-2 d-md-none d-lg-block">
-                            <div class="card text-center bg-dark text-light border border-0" style="width: 13rem;">
-                                <img src="../../resources/images/accesorios.jpg" class="card-img-top rounded" alt="...">
-                                <div class="card-body d-grid gap-2">
-                                    <h5 class="card-title">Collar para perro</h5>
-                                    <p class="card-text"></p>
-                                    <a href="#" class="btn btn-primary rounded">Ver mas...</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-2 d-md-none">
-                            <div class="card text-center bg-dark text-light border border-0" style="width: 13rem;">
-                                <img src="../../resources/images/frame.jpg" class="card-img-top rounded" alt="...">
-                                <div class="card-body d-grid gap-2">
-                                    <h5 class="card-title">frame</h5>
-                                    <p class="card-text"></p>
-                                    <a href="#" class="btn btn-primary rounded">Ver mas...</a>
-                                </div>
+                            <div class="col-2 mt-3">
+                                <a class="btn btn-primary text-light" data-bs-toggle="offcanvas"
+                                    href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+                                    Confirmar
+                                </a>
                             </div>
                         </div>
                     </div>
+                    <div class="col-2 mx-auto">
+                        <div class="offcanvas offcanvas-end text-light bg-dark" tabindex="-1" id="offcanvasExample"
+                            aria-labelledby="offcanvasExampleLabel">
+                            <div class="offcanvas-header">
+                                <h5 class="offcanvas-title" id="offcanvasExampleLabel">Resumen de compra</h5>
+                                <button type="button" class="btn-close-white text-reset" data-bs-dismiss="offcanvas"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="offcanvas-body">
+                                <div>
+                                    <p class="fs-4">Subtotal: $599.97</p>
+                                    <p class="fs-4">Cantidad de productos: 3</p>
+                                </div>
+                                <div class="d-grid gap-2 col-10 mx-auto my-3">
+                                    <button class="btn btn-primary" type="submit"
+                                        onclick="confirmacion()">Confirmar</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </main>
+            </div>
+        </div>
+        <div class="row">
+            <!-- footer -->
+            <footer class="bg-primary d-flex justify-content-around flex-column"></footer>
         </div>
     </div>
-    <div class="row">
-        <!-- footer -->
-        <footer class="bg-primary d-flex justify-content-around flex-column"></footer>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
         crossorigin="anonymous"></script>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"
-        integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+        integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../../controllers/public/nav-login.js"></script>
-    <script src="../../controllers/public/index.js"></script>
+    <script src="../../controllers/public/alerts.js"></script>
 </body>
 
 </html>
