--- a/views/public/productos.html
+++ b/views/public/productos.html
@@ -208,7 +208,7 @@
             </main>
         </div>
         <div class="row">
-            <!-- Pie de página -->
+            <!-- footer -->
             <footer class="bg-primary d-flex justify-content-around flex-column"></footer>
         </div>
     </div>
