--- a/views/dashboard/productos.html
+++ b/views/dashboard/productos.html
@@ -120,12 +120,13 @@
                 </div>
             </div><br>
             <!-- Tabla responsiva para los productos del area de administración (Jared) -->
-            <div class="row justify-content-center">
-                <table class="table table-striped table-bordered table-hover">
+            <div>
+                <table class="table table-stripped table-bordered">
                     <thead>
                         <tr>
+                            <th scope="col">Id</th>
                             <th scope="col">Nombre</th>
-                            <th scope="col">Descripción</th>
+                            <th scope="col">Descripcion</th>
                             <th scope="col">Precio</th>
                             <th scope="col">Stock</th>
                             <th scope="col">Imagen</th>
@@ -134,18 +135,16 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td scope="row">Taza 14 febrero</td>
-                            <td>Taza de porcelana con estampado de San Valentin</td>
-                            <td>8.99</td>
+                            <th scope="row">1</th>
+                            <td>Camiseta</td>
+                            <td>Camiseta blanca de algodon</td>
+                            <td>12.99</td>
                             <td>Si</td>
-                            <td>"Inserte imagen"</td>
-                            <td style="text-align: center;">
-                                <button class="border-0" onclick="openCreate2()">
-                                    <img src="../../resources/images/iconos/editar.png" alt="">
-                                </button>
-                                <button class="border-0" onclick="openCreate3()">
-                                    <img src="../../resources/images/iconos/eliminar.png" alt="">
-                                </button>
+                            <td>Ejemplo</td>
+                            <td>
+                                <img src="https://img.icons8.com/ios-filled/40/null/minus.png"
+                                    onclick="openCreate3()"/>
+                                <img src="../../resources/images/iconos/editar.png" onclick="openCreate2()">
                             </td>
                         </tr>
                     </tbody>
