--- a/views/dashboard/usuarios.html
+++ b/views/dashboard/usuarios.html
@@ -125,33 +125,32 @@
                 </div>
             </div><br>
             <!--tabla de contenido-->
-            <div class="row" id="tabla">
-                <table>
-                    <!--Encabezado de la tabla-->
+            <div>
+                <table class="table table-stripped table-bordered">
                     <thead>
                         <tr>
-                            <th>ID</th>
-                            <th>Nombre</th>
-                            <th>Apellido</th>
-                            <th>Correo</th>
-                            <th>Usuario</th>
-                            <th>Estado</th>
-                            <th></th>
+                            <th scope="col">Id</th>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Apellido</th>
+                            <th scope="col">Correo</th>
+                            <th scope="col">Usuario</th>
+                            <th scope="col">Estado</th>
+                            <th scope="col">Acciones</th>
                         </tr>
                     </thead>
-                    <!--Contenido de la tabla-->
                     <tbody>
                         <tr>
-                            <td>01</td>
-                            <td>Cristian Alejandro</td>
-                            <td>Morales Granados</td>
-                            <td>alejandro@gmail.com</td>
-                            <td>Alejo321</td>
+                            <th scope="row">1</th>
+                            <td>Jared</td>
+                            <td>Diaz</td>
+                            <td>ejemplo@gmail.com</td>
+                            <td>JaredDiaz</td>
                             <td>Activo</td>
-                            <!--Botones para actualizar y desactivar un usuario-->
-                            <td><img src="https://img.icons8.com/ios-filled/40/null/minus.png"
-                                    onclick="openCreate3()" /><img src="../../resources/images/iconos/editar.png"
-                                    onclick="editarusuario()"></td>
+                            <td>
+                                <img src="https://img.icons8.com/ios-filled/40/null/minus.png"
+                                    onclick="openCreate3()"/>
+                                <img src="../../resources/images/iconos/editar.png" onclick="editarUsuario()">
+                            </td>
                         </tr>
                     </tbody>
                 </table>
