--- a/views/dashboard/clientes.html
+++ b/views/dashboard/clientes.html
@@ -130,6 +130,7 @@
                             <th scope="col">Usuario</th>
                             <th scope="col">Contraseña</th>
                             <th scope="col">Estado</th>
+                            <th scope="col">Acciones</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -141,6 +142,10 @@
                             <td>JaredDiaz</td>
                             <td>******</td>
                             <td>Activo</td>
+                            <td><img src="https://img.icons8.com/ios-filled/40/null/minus.png"
+                                    onclick="openDelete()" />
+                                <img src="../../resources/images/iconos/editar.png" onclick="openUpdate()">
+                            </td>
                         </tr>
                     </tbody>
                 </table>
