--- a/views/dashboard/categorias.html
+++ b/views/dashboard/categorias.html
@@ -133,6 +133,7 @@
                             <th scope="col">Categoria</th>
                             <th scope="col">Tipo</th>
                             <th scope="col">Estado</th>
+                            <th scope="col">Acciones</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -141,6 +142,10 @@
                             <td>Ejemlo</td>
                             <td>Ejemplo</td>
                             <td>Ejemplo</td>
+                            <td><img src="https://img.icons8.com/ios-filled/40/null/minus.png"
+                                    onclick="eliminarCategoria()" />
+                                <img src="../../resources/images/iconos/editar.png" onclick="editarCategoria()">
+                            </td>
                         </tr>
                     </tbody>
                 </table>
