--- a/views/dashboard/clientes.html
+++ b/views/dashboard/clientes.html
@@ -142,8 +142,7 @@
                             <td>JaredDiaz</td>
                             <td>******</td>
                             <td>Activo</td>
-                            <td><img src="https://img.icons8.com/ios-filled/40/null/minus.png"
-                                    onclick="openDelete()" />
+                            <td><img src="https://img.icons8.com/ios-filled/40/null/minus.png" onclick="openDelete()" />
                                 <img src="../../resources/images/iconos/editar.png" onclick="openUpdate()">
                             </td>
                         </tr>
