--- a/views/include/nav.ejs
+++ b/views/include/nav.ejs
@@ -39,13 +39,19 @@
                 class="logo-img"></a>
         <nav class="navegation">
             <a href="../public/index.html">Inicio</a>
-            <a href="../public/productos.html">Productos</a>          
-            <% if(user== false ) { %>
+            <a href="../public/productos.html">Productos</a>
+            <% if(user == false ) { %>
                 <%- include('login') %>
+            <% } else { %>
+                <% if(user.role == 'admin'){ %>
+                    <a href="/logOut/users"> <%= user.user %> </a>
                 <% } else { %>
                     <a href="../public/carrito.html">Carrito</a>
-                    <a href="/logOut/users"><%= user %></a>
-                    <% } %>
+                    <a href="/logOut/users"> <%= user.user %> </a>
+                <% } %>
+            <% } %>
         </nav>
     </header>
 </div>
+
+                        
