--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,47 +1,44 @@
 <div class="container-fluid">
     <div class="row">
         <main>
+            <div class="container d-flex justify-content-start mt-3">
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary border-0" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal">Subir Imagen</button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <form action="/api/images" method="post">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h1 class="modal-title fs-5" id="exampleModalLabel">Subir Imagen</h1>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="input-group flex-nowrap">
+                                        <input type="file" class="form-control" aria-describedby="addon-wrapping" name="image" required>
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary"
+                                        data-bs-dismiss="modal">Cerrar</button>
+                                    <button type="submit" class="btn btn-primary">Guardar</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
             <div class="carousel-principal">
                 <div class="wrapper-carousel">
                     <i id="left" class="fa-solid fa-angle-left"></i>
                     <div class="carousel">
-                        <img src="/images/tazas.jpg" alt="" draggable="false">
-                        <img src="/images/mousepad.jpg" alt="" draggable="false">
-                        <img src="/images/accesorios.jpg" alt="" draggable="false">
-                        <img src="/images/camisas.jpg" alt="" draggable="false">
-                        <img src="/images/ropa.jpg" alt="" draggable="false">
-                        <img src="/images/frame.jpg" alt="" draggable="false">
-                        <!-- Button trigger modal -->
-                        <button type="button" class="mx-2 bg-dark border-0" data-bs-toggle="modal"
-                            data-bs-target="#exampleModal">
-                            <img src="/images/add.png" class="w-100" alt="" draggable="false">
-                        </button>
-
-                        <!-- Modal -->
-                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                            aria-hidden="true">
-                            <div class="modal-dialog">
-                                <form action="" method="post">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h1 class="modal-title fs-5" id="exampleModalLabel">Subir Imagen</h1>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body">
-                                            <div class="input-group flex-nowrap">
-                                                <input type="file" class="form-control" aria-describedby="addon-wrapping">
-                                            </div>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary"
-                                                data-bs-dismiss="modal">Cerrar</button>
-                                            <button type="submit" class="btn btn-primary">Guardar</button>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
+                        <% resources.forEach((data) => { %>
+                            <img src="/images/<%= data.image %>" alt="" draggable="false">
+                        <% }) %>
                     </div>
                     <i id="rigth" class="fa-solid fa-angle-right"></i>
                 </div>
