--- a/views/include/nav.ejs
+++ b/views/include/nav.ejs
@@ -39,7 +39,7 @@
                 class="logo-img"></a>
         <nav class="navegation">
             <a href="../public/index.html">Inicio</a>
-            <a href="../public/productos.html">Productos</a>
+            <a href="/products">Productos</a>
             <% if(user == false ) { %>
                 <%- include('login') %>
             <% } else { %>
